examples/test/testpolicy18652.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18652
  namespace: namespace485
spec:
  podSelector:
    matchLabels:
      key41: value1
      key15: value19
      key46: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value11
      podSelector:
        matchLabels:
          key1: value4
          key45: value7
